--- a/css/style.css
+++ b/css/style.css
@@ -279,3 +279,87 @@ body {
   font-size: 1.2rem;
   padding: 10px;
 }
+/* css for the place page */
+.layout {
+    display: flex;
+}
+.main {
+    padding: 30px;
+    width: 100%;
+}
+.top-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.search-box {
+    border: 2px solid black;
+    border-radius: 20px;
+    padding: 8px 15px;
+}
+
+.search-box input {
+    border: none;
+    outline: none;
+    background: transparent;
+}
+
+
+.tabs {
+    margin: 25px 0;
+    display: flex;
+    gap: 20px;
+    
+}
+
+.tab {
+    padding: 8px 25px;
+    border: none;
+    background-color: #e1dcf5;
+    border-radius: 15px;
+    cursor: pointer;
+    font-weight: bold;
+    border-style: solid;
+    border-width: 1px;
+    transition: background-color 0.15s;
+}
+
+.tab:active{
+    background-color: #796bf1;
+    color: white;
+}
+.cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 35px;
+}
+
+.card {
+    background-color: #ebe7fc;
+    padding: 15px;
+    border-radius: 15px;
+    border: 1px solid #d2cce9;
+    transition: transform 0.5s ease;
+    cursor: pointer;
+}
+.card:hover {
+  transform: scale(1.05);
+}
+
+.card img {
+    width: 100%;
+    height: 160px;
+    object-fit: cover;
+    border-radius: 12px;
+}
+
+.card h3 {
+    margin-top: 10px;
+    font-size: 18px;
+}
+
+.card p {
+    font-size: 16px;
+    color: #444;
+}
