--- a/css/home.css
+++ b/css/home.css
@@ -5,12 +5,37 @@
   position: relative;
 }
 
+.search {
+  width: 200px;
+  border: 1px solid rgb(224, 224, 224);
+  border-radius: 2rem;
+  background-color: rgb(255, 255, 255);
+  margin-bottom: 1rem;
+  float: right;
+  position: relative;
+}
+
+.search input {
+  background-color: transparent;
+  border: none;
+  border-radius: 2rem;
+  width: inherit;
+  padding: 10px 1.5rem 10px 2rem;
+}
+
+.search i {
+  position: absolute;
+  right: 0;
+  top: 13px;
+  left: 10px;
+  opacity: 0.5;
+}
+
 .container {
   display: flex;
   height: 100%;
 }
 
-/* TOP SEARCH BAR */
 .top-bar {
   width: 100%;
   display: flex;
@@ -74,8 +99,14 @@
 }
 
 /* MAP AREA */
+
+.cont-map {
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+}
 .map-box {
-  width: 100%;
+  width: 70%;
   height: 320px;
   border-radius: 12px;
   border: 1px solid #dedede;
@@ -101,4 +132,11 @@
   color: white;
   cursor: pointer;
   font-size: 14px;
+}
+
+.places {
+  background-color: white;
+  border-radius: 12px;
+  padding: 1rem;
+  height: fit-content;
 }
